# PA

./: A VOIR AVEC HENNOU.txt  Audit de sécurité.docx  AuditSecurite (1).docx  CHARTE GRAPHIQUE.docx  Chiffrage Financier Dév.xlsx  ChoixInfrastructure.docx  Descriptif fonctionnel de l'appli Web.docx  Diagramme De GANTT PA 2022.gan  Etat d'avancement.docx  Infra et Config des services.docx  Matrice RACI.docx  Modélisation Architecture.pkt  ORGANISATION DU PROJET.docx  OffreCommerciale.docx  PA.txt  Plan de communication.docx  Prgm_C.txt  Prgm_Curl.txt  ProduitsLogiciels (1).docx  Recherche M.Hennou.docx
CODE SOURCE/: .htaccess  Fr.js  achat.php  add_entreprise.php  add_part.php  add_produit.php  add_red.php  barcode.js  catalogue.php  check_partenaire.php  config.php  connexion.php  contact.php  dashboard.php  dbConnect.php  deconnexion.php  delete.php  delete_client.php  delete_entreprise.php  delete_part.php  delete_produit.php  delete_reduction.php  demande.js  demande.php  demande_admin.php  entrepot.php  entreprise.php  erreur.php  export.php  functions.js  graph.js  graph2.js  graph3.js  index.php  inscription_client.php  inscription_entreprise.php  link.php  link_entreprise.php  log.txt  mail.php  (+32 more)
CODE SOURCE/API-PA/: .htaccess  index.php
CODE SOURCE/CSS/: catalogue.css  check_part.css  connexion.css  demande.css  entrepot.css  entreprise.css  footer.css  header.css  partenaire.css  produit.css  produits.css  profil.css  reduction.css  userList.css  utilisateurs.css
CODE SOURCE/Includes/: connexion.php  footer.php  (+2 more)
Projet Clion/: CMakeLists.txt  main.c
(+10 files in other folders)
